--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=\, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <script src="javascript.js" defer></script>
+  <script src="script.js" defer></script>
   <title>Odin Etch-a-Sketch</title>
 </head>
 <body>
-  
+    <!-- container div to contain 16x16 js divs -->
+    <div class="grid-container">
+    </div>
 </body>
 </html>
