--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
   <title>Odin Etch-a-Sketch</title>
 </head>
 <body>
-    <!-- container div to contain 16x16 js divs -->
-    <div class="grid-container">
-    </div>
+  <div class="header">
+    <h1>Ethc a Sketch</h1>
+  </div>
+  <!-- container div to contain 16x16 js divs -->
+  <div class="container">
+    <div class="grid-container"></div>
+  </div>
+  <div class="btns">
+    <button>Change size</button>
+    <button>Clear</button>
+  </div>
 </body>
 </html>
