--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="header">
-    <h1>Ethc a Sketch</h1>
+    <h1>Ethc-a-Sketch</h1>
   </div>
   <!-- container div to contain 16x16 js divs -->
   <div class="container">
