added clear grid to not add up last grid inputs

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="grid-container"></div>
   </div>
   <div class="btns">
-    <button>Change size</button>
-    <button>Clear</button>
+    <button id="change">Change size</button>
+    <button id="clear">Clear</button>
   </div>
 </body>
 </html>
