done with whole project

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <div class="btns">
     <button id="change">Change size</button>
     <button id="clear">Clear</button>
+    <button id="color-mode">Black</button>
+    <button id="rainbow">Rainbow</button>
   </div>
 </body>
 </html>
